updated final draft

--- a/home.html
+++ b/home.html
@@ -130,42 +130,35 @@
 	</div>
 	
    	<div class="container">
+		
 	<div class="bandSection row" id="band">
-		<h3 class="col-sm-12 col-lg-12 text-center">The Band</h3>
-        <div class="col-lg-4">
-            <p><strong>Not Francis W.</strong></p><br>
-            <a href="#drop1" data-toggle="collapse">
-				<img src="http://i.dailymail.co.uk/i/pix/2011/01/03/article-1343656-001D9C5900000258-762_224x326.jpg" class="img-circle circlemepicture" alt="Picture of Francis W. reclining.">
+		
+		<h3 class="text-center">The Band</h3>
+		
+        <div class="col-lg-6 col-sm-12">
+            <p><strong>Fran</strong></p>
+            <a href="#">
+				<img src="FranonBeach.jpg" class="img-circle circlemepicture" alt="Picture of Fran on beach gazing off into the distance. Ironically he is actually facing inland at a cliff.">
 			</a>
-			<div id="drop1" class="collapse">
-				<p>This guy is no longer in the band. We'd kill him if we thought we could get away with it.</p>
-				<p>Currently working with Bruno Mars.</p>	
-				<p>I promise i'm not bitter.</p>
-			</div>
         </div>
-        <div class="col-lg-4">
-            <p><strong>Francis W.</strong></p><br>
-            <a href="#drop2" data-toggle="collapse">
-				<img src="Sailor%20in%20yellow.jpg" class="img-circle circlemepicture" alt="Picture of Francis W. reclining.">
-			</a>
-			<div id="drop2" class="collapse">
+		
+        <div class="col-lg-6 col-sm-12">
+			<div>
+				<br>
+				<br>
+				<br>
+				<br>
 				<p>Songwriter, singer, guitarist, drummer, bassist, piano, keyboards, ambient, vibes</p>
-				<p>Seems like a buddhist kinda guy. Not religious but definitely chill. </p>
-				<P>Definitely used to own an insence burner.</P>
+				<p>He's seen stuff. </p>
+				<P>He is definitely aware of a few 'things'.</P>
+				<h3 class="text-center">Lonely</h3>
+				<p>Currently Fran is making music alone. If you want to get involved just make some kind of contact on the details <a href="#contact">below</a></p>
+				<h2 class="text-center">This isn't seapunk. Sorry.</h2>
 			</div>
         </div>
-        <div class="col-lg-4">
-            <p><strong>Not Francis W.</strong></p><br>
-			<a href="#drop3" data-toggle="collapse">
-            	<img src="http://i.dailymail.co.uk/i/pix/2011/01/03/article-1343656-001D9C5900000258-762_224x326.jpg" class="img-circle circlemepicture" alt="Picture of Francis W. reclining.">
-			</a>
-			<div id="drop3" class="collapse">
-				<p>He used to have a tv show but now seems pretty happy building his media empire behind the scenes.</p>
-				<p>They used to have an incredible ride.</p>
-				<p>Mainly working in DIY these days.</p>
-			</div>
-        </div>
+		
     </div>
+		
 	</div>
 
 	
@@ -230,7 +223,7 @@ $(document).ready(function(){
     // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
     $('html, body').animate({
       scrollTop: $(hash).offset().top
-    }, 900, function(){
+    }, 1200, function(){
 
       // Add hash (#) to URL when done scrolling (default click behavior)
       window.location.hash = hash;
