updating with finished website 1

--- a/home.html
+++ b/home.html
@@ -101,31 +101,26 @@
 </div>
 </div>
 	<div class="middle bg-1 text-center">
-		<h1>Blissy Ignorance/Drink Your Youth - Tracklist</h1>
+		<h1 style="color:white;">Blissy Ignorance/Drink Your Youth - Tracklist</h1>
 		
 		<h2>Blissy Ignorance</h2>
-		<p>A song about the joys of growing up, sharing too much and turning bitter.</p>
-		<p>I promise i'm not bitter.</p>
+		<p>A song about growing up, sharing too much and turning bitter.</p>
 		
 		<h2>Drink Your Youth</h2>
-		<p>A song about rejecting growing up. Or denying it is even happenning.</p>	
-		<p>Regression at it's most joyless.</p>
+		<p>A song about escapism from growing up.</p>	
+		
 		
 		<h2>Fits and Starts (Would I Lie To You?)</h2>
-		<p>'Would i lie you, would i lie to you'.</p>
-		<p>What does it mean? Please keep reading.</p>
 		
 		<h2>Blissy Ignorance (I Just Sighed Remix)</h2>
-		<p>Pedestrianised dancehall reworking of the original.</p>
-		<p>Seriously, that is what it is. </p>
+		
 		
 		<p>And</p>
 		<div>
 			
 			<h1 style="color:grey;">Additional song that will be available for free here very soon.</h1>
-			<h2>Fits And Starts (I Just Sighed Remix)</h2>
-			<p>Smooth 80s synth remix of the original.</p>
-			<p>It makes extensive use of a keyboard saxophone preset. Please try and contain your salivation.</p>
+			<h2 style="color:grey;">Fits And Starts (I Just Sighed Remix)</h2>
+			<p style="color:grey;">Smooth 80s synth reworking of the original making extensive use of a keyboard saxophone preset.</p>
 		</div>
 	</div>
 	
@@ -151,9 +146,8 @@
 				<p>Songwriter, singer, guitarist, drummer, bassist, piano, keyboards, ambient, vibes</p>
 				<p>He's seen stuff. </p>
 				<P>He is definitely aware of a few 'things'.</P>
-				<h3 class="text-center">Lonely</h3>
-				<p>Currently Fran is making music alone. If you want to get involved just make some kind of contact on the details <a href="#contact">below</a></p>
-				<h2 class="text-center">This isn't seapunk. Sorry.</h2>
+				<h3 class="text-center">Musicians</h3>
+				<p>Currently Fran is making music alone. If you want to get involved and you play drums or bass guitar just make some kind of contact on the details <a href="#contact">below</a></p>
 			</div>
         </div>
 		
