updated index page title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 
-<title>Sanssouci ~/\/\~ Blissy Ignorance/Drink Your Youth EP</title>
+<title>Sanssouci Blissy Ignorance/Drink Your Youth EP</title>
 <link href="https://fonts.googleapis.com/css?family=Cormorant+Infant|Vollkorn" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
     <!-- Latest compiled and minified CSS -->
