added descriptive markup, removed contact form, updated content and remove user style agent margin on body

--- a/source/home.html
+++ b/source/home.html
@@ -26,11 +26,11 @@
 
 <body>
     <header>
-        <div class="logoBox">
+        <section class="logoBox">
             <a href="#" class="logoA text-center">
                 <h1 class="logo">Sanssouci</h1>
             </a>
-        </div>
+        </section>
         <nav>
             <a href="#" id="navHomeButton" class="nav-btn">HOME</a>
             <a href="https://sanssouci.bandcamp.com/album/blissy-ignorance-drink-your-youth" class="nav-btn">BANDCAMP</a>
@@ -39,12 +39,12 @@
     </header>
 
     <main class="latest" id="home">
-        <div class="latest-heading">
+        <section class="latest-heading">
             <h3 class="subHeader">Sanssouci</h3>
             <h3 class="mainHeader weighty">Blissy Ignorance / Drink Your Youth EP</h3>
-        </div>
-        <div class="latest-grid">
-            <div class="latest-text">
+        </section>
+        <section class="latest-grid">
+            <section class="latest-text">
                 <p>The new double A-side</p>
                 <p class="weighty">Plus</p>
                 <p>Actual real life B-side</p>
@@ -53,89 +53,78 @@
                 <p class="weighty">All available now to stream below.</p>
                 <p>Download it from the
                     <a class="weighty" href="https://sanssouci.bandcamp.com/album/blissy-ignorance-drink-your-youth">Bandcamp</a> page.</p>
-            </div>
-            <div class="artwork">
+            </section>
+            <section class="artwork">
                 <a src="https://sanssouci.bandcamp.com/album/blissy-ignorance-drink-your-youth">
                     <img id="albumArt" class="hover" src="images/EPCoverArt.jpg" alt="album logo">
                 </a>
-            </div>
-        </div>
+            </section>
+        </section>
     </main>
 
-    <div id="bandcampPlayer">
+    <section id="bandcampPlayer">
         <p class="text-center">
             <iframe style="border: 0; width: 300px; height: 538px;" src="https://bandcamp.com/EmbeddedPlayer/album=941749135/size=large/bgcol=ffffff/linkcol=f171a2/transparent=true/" seamless><a href="http://sanssouci.bandcamp.com/album/blissy-ignorance-drink-your-youth">Blissy Ignorance/Drink Your Youth by Sanssouci</a></iframe>
         </p>
-    </div>
+    </section>
 
-    <div class="gallery">
-        <div class="frame hover">
+    <section class="gallery">
+        <section class="frame hover">
             <figure>
                 <img src="images/recording%20photos.jpg" alt="Images of where recording was made; kitchen and bedroom of parents house.">
                 <figcaption>
                     The finely tuned acoustics of a kitchen.
                 </figcaption>
             </figure>
-        </div>
-        <div class="frame hover">
+        </section>
+        <section class="frame hover">
             <figure>
                 <img src="images/guitarPedals.jpg" alt="guitar gear">
                 <figcaption>
                     Pedals
                 </figcaption>
             </figure>
-        </div>
+        </section>
 
-        <div class="frame hover">
+        <section class="frame hover">
             <figure>
                 <img src="images/FraninSunshine.jpg" alt="franW looking stupid">
                 <figcaption>
                     Fran.
                 </figcaption>
             </figure>
-        </div>
-    </div>
-    <div class="EPInfo">
+        </section>
+    </section>
+    <section class="EPInfo">
         <h1>Blissy Ignorance/Drink Your Youth - Tracklist</h1>
         <h2>Blissy Ignorance</h2>
         <p>A song about growing up, sharing too much and turning bitter.</p>
         <h2>Drink Your Youth</h2>
-        <p>A song about escapism and growing up and turning bitter.</p>
+        <p>A song about escapism, growing up and turning bitter.</p>
         <h2>Fits and Starts (Would I Lie To You?)</h2>
-        <p>Bitter escapism.</p>
+        <p>Bitter.</p>
         <h2>Blissy Ignorance (I Just Sighed Remix)</h2>
-    </div>
+    </section>
 
-    <div class="bandSection" id="band">
+    <section class="bandSection" id="band">
         <h3 class="text-center">The Band</h3>
-        <div class="band-grid">
-            <div class="band-image">
+        <section class="band-grid">
+            <section class="band-image">
                 <h4>Fran</h4>
-                <img src="images/FranonBeach.jpg" class="franPic" alt="Picture of Fran on beach gazing off into the distance. Ironically he is actually facing inland at a cliff.">
-            </div>
-            <div class="band-text">
-                <p>Songwriter, singer, guitarist, drummer, bassist, piano, keyboards, ambient, vibes</p>
-                <p>He's seen stuff. </p>
-                <P>He is definitely aware of a few 'things'.</P>
-                <h4 class="text-center">Musicians</h4>
-                <p>Currently Fran is looking for a drummer. If you play the drums and like the music get in contact
-                    <a class="weighty" href="#contact">below.</a>
-                </p>
-            </div>
-        </div>
-    </div>
+                <img src="images/FranonBeach.jpg" class="franPic" alt="Fran on beach gazing off into the distance. Ironically he is actually facing inland at a cliff.">
+            </section>
+            <section class="band-text">
+                <p>Songwriter, singer, guitarist, drummer, bassist, piano, keyboards.</p>
+                <p>Hoping to record a follow up record in 2019...</p>
+            </section>
+        </section>
+    </section>
 
-    <div id="contact">
+    <section id="contact">
         <h3 class="text-center">Contact</h3>
-        <p class="text-center">For any other information please use the below form. I promise to maybe look at your comment.</p>
-        <p class="text-center"><em>Just fill in this form.<span class="glyphicon glyphicon-envelope"></span></em></p>
-            <form class="contact-form" NAME="myform" ACTION="" METHOD="GET">
-                <input autocomplete="name" type="text" name="name" placeholder="name">
-                <input autocomplete="email" type="text" name="email" placeholder="email">
-                <textarea autocomplete="comment" name="comment" name="comment" cols="30" rows="4" placeholder="comment..."></textarea>
-                <input id="submit" type="submit" placeholder="send">
-            </form> 
-    </div>
+        <p class="text-center">Twitter <a class="contact-link" href="https://twitter.com/Fran_Whitehead"><span class="twitter-link">@fran_whitehead</span></a>
+        </p>
+    </section>
 </body>
 
 </html>
