--- a/source/index.html
+++ b/source/index.html
@@ -21,24 +21,24 @@
 </head>
 <body>	
 	
-<div class="container">
+<section class="container">
     
-    <div class="introbox">
-        <div>          
+    <section class="introbox">
+        <section>          
             <h2 class="EPstyle"> Sanssouci</h2>
-        </div> 
-        <div>            
+        </section> 
+        <section>            
             <h2 class="EPstyle">Blissy Ignorance/Drink Your Youth EP</h2>
-        </div>   
-    </div>
-	<div class="coverArtBox">
+        </section>   
+    </section>
+	<section class="coverArtBox">
 		<img class="smallLP" src="images/EPCoverArt.jpg" alt="lake picture album art">
-	</div>
-    <div class="centbuttons">
+	</section>
+    <section class="centbuttons">
             <a class="intrbtn" href="https://sanssouci.bandcamp.com/">Listen</a>
             <a class="intrbtn" href="/home.html">Enter</a>
-    </div> 
-</div>
+    </section> 
+</section>
 
 </body>
 </html>
