--- a/source/home.html
+++ b/source/home.html
@@ -107,14 +107,8 @@
     </section>
 
     <section class="bandSection" id="band">
-        <h3 class="text-center">The Band</h3>
-        <section class="band-grid">
-            <section class="band-image">
-                <h4>Fran</h4>
-                <img src="images/FranonBeach.jpg" class="franPic" alt="Fran on beach gazing off into the distance. Ironically he is actually facing inland at a cliff.">
-            </section>
+        <h3 class="text-center">The Future</h3>
             <section class="band-text">
-                <p>Songwriter, singer, guitarist, drummer, bassist, piano, keyboards.</p>
                 <p>Hoping to record a follow up record in 2019...</p>
             </section>
         </section>
